Convert to HardwareSerial

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,10 @@
-name=Adafruit Fingerprint Sensor Library
+name=Hardware Serial Adafruit Fingerprint Sensor Library
 version=1.0.0
 author=Adafruit
-maintainer=Adafruit <info@adafruit.com>
-sentence=Arduino library for interfacing to the fingerprint sensor in the Adafruit shop
-paragraph=Arduino library for interfacing to the fingerprint sensor in the Adafruit shop
+maintainer=Adafruit <info@adafruit.com>, Marvin Roger <nivramdu94@gmail.com>
+sentence=Arduino library for interfacing with Hardware Serial to the fingerprint sensor in the Adafruit shop
+paragraph=Arduino library for interfacing with Hardware Serial to the fingerprint sensor in the Adafruit shop
 category=Sensors
-url=https://github.com/adafruit/Adafruit-Fingerprint-Sensor-Library
+url=https://github.com/marvinroger/Adafruit-Hardware-Serial-Fingerprint-Sensor-Library
 architectures=*
+
